--- a/style.css
+++ b/style.css
@@ -3,26 +3,81 @@
     padding: 0px;
 }
 
-body {
+section {
     margin: 5% 10%;
+    padding: 2%;
     border-style: solid;
     border-width: 1px;
+    background-color: #eeeeee;
+
+    display: flex;
+    flex-direction: column;
 }
 
-section {
-    padding: 2%;
-}
 
 h1 {
-    display: flex;
+    font-size: 1.5em;
+    font-family: sans-serif;
+    font-weight: 100;
+    border-style: solid;
+    border-color: gray;
+    padding: 0px;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px 10px;
+    width: 30%;
+
+    align-self: center;
+}
+
+h3 {
+    font-family: sans-serif;
+    font-weight: 100;
+    font-size: 1em;
 }
 
 .sides {
     display: flex;
     flex-direction: row;
+    margin: 2em 0;
 }
 
 .top-side {
     flex: 0.5;
     flex-direction: column;
+}
+
+select {
+    padding: 0.5em;
+    font-size: 1.2em;
+
+    border-radius: 5px;
+    width: 95%;
+}
+
+input {
+    padding: 0.5%;
+    font-size: 1em;
+}
+
+#game-count {
+    width: 10%;
+}
+
+.top-buttons {
+    align-self: flex-end;
+}
+
+button {
+    padding: 0.5em 2em;
+    border-radius: 10px;
+    font-size: 1em;
+}
+
+#btn-submit {
+    background-color: #d3e9d2;
+}
+
+#btn-cancel {
+    background-color: #f5cfcd;
 }
