updatin results table based on selected source

--- a/src/style.css
+++ b/src/style.css
@@ -87,6 +87,15 @@ button {
     color: white
 }
 
+.data_row {
+    background-color: lightblue;
+}
+
+td {
+    padding: 10px;
+    text-align: center;
+}
+
 .active {
     background-color: green;
 }
